--- a/config.yaml
+++ b/config.yaml
@@ -54,9 +54,12 @@ menu:
     - name: RSS
       url: index.xml
       weight: 2
+    - name: About
+      url: about/
+      weight: 3
     - name: Contact
       url: contact/
-      weight: 3
+      weight: 4
     - name: Site Source
       url: 'https://github.com/m6wiq/m6wiq.uk-blog'
-      weight: 4
+      weight: 5
